[gd_scene load_steps=6 format=3 uid="uid://c444r884rkxd1"]

[ext_resource type="Texture2D" uid="uid://cwlij5qwegpty" path="res://enemy.png" id="1_4sdt8"]
[ext_resource type="Script" path="res://enemy.gd" id="1_bfs01"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dim6m"]
size = Vector2(9, 14)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdo6m"]
bg_color = Color(1, 0.339232, 0.310417, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3qf0"]
bg_color = Color(0.218966, 0.709132, 0.33525, 1)

[node name="Enemy" type="Area2D"]
collision_layer = 8
collision_mask = 10
script = ExtResource("1_bfs01")

[node name="MovementCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_dim6m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4sdt8")

[node name="WallRaycast" type="RayCast2D" parent="."]
target_position = Vector2(7, 0)
collision_mask = 2
hit_from_inside = true

[node name="FloorRaycast" type="RayCast2D" parent="."]
target_position = Vector2(7, 9)
collision_mask = 2

[node name="GroundedRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 2

[node name="Healthbar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = -12.0
offset_right = 11.0
offset_bottom = -8.0
theme_override_styles/background = SubResource("StyleBoxFlat_vdo6m")
theme_override_styles/fill = SubResource("StyleBoxFlat_q3qf0")
max_value = 10.0
step = 1.0
value = 7.0
show_percentage = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
